--- a/indiscriminate/config.json
+++ b/indiscriminate/config.json
@@ -1,7 +1,7 @@
 {
     "prefix": "-",
     "token": "NzczNzg2OTA0NDc4MjIwMjk4.X6OTNg.y3xw7O2xMHook1FTk5rMC762wKc",
-    "color": "#FFD700",
+    "color": "#EE9C4D",
     "commands": "commands",
     "logChannelName": "bot-kipa"
 }
