--- a/indiscriminate/config.json
+++ b/indiscriminate/config.json
@@ -3,5 +3,6 @@
     "token": "NzczNzg2OTA0NDc4MjIwMjk4.X6OTNg.y3xw7O2xMHook1FTk5rMC762wKc",
     "color": "#EE9C4D",
     "commands": "commands",
-    "logChannelName": "bot-kipa"
+    "logChannelName": "bot-kipa",
+    "punishmentChannel": "discord-punishment"
 }
