stable push, bug fixes MOSTLY done

--- a/indiscriminate/config.json
+++ b/indiscriminate/config.json
@@ -1,7 +1,7 @@
 {
     "prefix": "-",
-    "token": "NzczNzg2OTA0NDc4MjIwMjk4.X6OTNg.y3xw7O2xMHook1FTk5rMC762wKc",
-    "color": "#EE9C4D",
+    "token": "NzczNzg2OTA0NDc4MjIwMjk4.X6OTNg.h3S2Dmq0Yk16CMBeIGqSEbLkjSg",
+    "color": "#CAB5ED",
     "commands": "commands",
     "logChannelName": "bot-kipa",
     "punishmentChannel": "discord-punishment"
