--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nan": "^2.12.1",
     "pm2": "^4.5.0",
     "redis": "^3.0.2",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "ytdl-core": "^4.0.4"
   },
   "devDependencies": {},
   "scripts": {
