added a built in bot restarter

--- a/indiscriminate/config.json
+++ b/indiscriminate/config.json
@@ -1,7 +1,7 @@
 {
     "prefix": "-",
     "token": "NzczNzg2OTA0NDc4MjIwMjk4.X6OTNg.h3S2Dmq0Yk16CMBeIGqSEbLkjSg",
-    "color": "#CAB5ED",
+    "color": "#BCD6FA",
     "commands": "commands",
     "logChannelName": "bot-kipa",
     "punishmentChannel": "discord-punishment"
