--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "discord.js": "^12.3.1",
     "fs": "0.0.1-security",
     "fsevents": "^1.2.4",
+    "git": "^0.1.5",
     "ms": "^2.1.2",
     "nan": "^2.12.1",
     "node-opus": "^0.3.3",
